toolkit/components/telemetry/tests/unit/test_UntrustedModulesPing.js
@@ -56,7 +56,7 @@ add_task(async function test_send_ping() {
 
     // These check that a DLL loaded at startup is evaluated properly.
     // This is hard-coded as untrusted in ModuleEvaluator for testing.
-    { nameMatch: /mozglue.dll/i, expectedTrusted: false,
+    { nameMatch: /untrusted-startup-test-dll.dll/i, expectedTrusted: false,
         isStartup: true, wasFound: false },
     { nameMatch: /kernelbase.dll/i, expectedTrusted: true,
         isStartup: true, wasFound: false },
